# noise-prune-ctrnn-code

./: .gitignore  README.md  pyproject.toml  requirements.txt
Mod_Cog/: README.md  __init__.py  mod_cog_tasks.py  setup.py
configs/: task_preservation_tanh_h512_modcog_revised8_12k_seqbest_simnp_ablation_2x2_p50_80_fixedbatches.json  task_preservation_tanh_h512_modcog_revised8_12k_seqbest_simnp_ablation_p50_80_fixedbatches.json
docs/: modcog_defaults.md  release_scope.md
neurogym/: __init__.py
pruning_benchmark/: README.md  __init__.py  __main__.py
scripts/: analyze_capped_quantile_plot_significance.py  analyze_paper_relevant_statistics.py  analyze_revised_scope_significance.py  analyze_sim_np_sigma_sensitivity.py  coarsen_rescale_value_histograms.py  export_rescale_value_distributions.py  generate_tanh_h512_modcog_revised8_lnp_snp_capped_rescale_missing_quantiles_1seed_suite.py  generate_tanh_h512_modcog_revised8_lnp_snp_capped_rescale_missing_quantiles_pruneseeds1_2_suite.py  generate_tanh_h512_modcog_revised8_lnp_snp_q50_capped_rescale_3seed_suite.py  generate_tanh_h512_modcog_revised8_revised_task_only_suite.py  generate_tanh_h512_modcog_revised8_simnp_ablation_suite.py  run_tanh_h512_modcog_revised8_lnp_snp_capped_rescale_missing_quantiles_1seed.sh  run_tanh_h512_modcog_revised8_lnp_snp_capped_rescale_missing_quantiles_pruneseeds1_2.sh  run_tanh_h512_modcog_revised8_lnp_snp_q50_capped_rescale_3seed.sh  run_tanh_h512_modcog_revised8_sigma_sensitivity.py  summarize_simnp_ablation.py  summarize_tanh_h512_modcog_revised8_lnp_snp_cap_percentile_curve_1seed.py  (+4 more)
(+27 files in other folders)
